// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Title /> should render Title with color 1`] = `
.c0 {
  color: hsla(220,30%,96%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 1.5rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 2rem;
  margin: 0;
  padding: 0;
}

<div>
  <h3
    class="c0"
    color="surface.text.subtle.highContrast"
    data-blade-component="title"
    font-family="text"
    font-size="600"
    font-style="normal"
    font-weight="bold"
  >
    Displaying Landing Page Title
  </h3>
</div>
`;

exports[`<Title /> should render Title with default properties 1`] = `
.c0 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 1.5rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 2rem;
  margin: 0;
  padding: 0;
}

<div>
  <h3
    class="c0"
    color="surface.text.normal.lowContrast"
    data-blade-component="title"
    font-family="text"
    font-size="600"
    font-style="normal"
    font-weight="bold"
  >
    Displaying Landing Page Title
  </h3>
</div>
`;

exports[`<Title /> should render Title with variant "large" 1`] = `
.c0 {
  color: hsla(217,18%,45%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 2rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 2.5rem;
  margin: 0;
  padding: 0;
}

<div>
  <h1
    class="c0"
    color="surface.text.subdued.lowContrast"
    data-blade-component="title"
    font-family="text"
    font-size="800"
    font-style="normal"
    font-weight="bold"
  >
    Displaying Landing Page Title
  </h1>
</div>
`;

exports[`<Title /> should render Title with variant "medium" 1`] = `
.c0 {
  color: hsla(216,16%,60%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 1.75rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 2.5rem;
  margin: 0;
  padding: 0;
}

<div>
  <h2
    class="c0"
    color="surface.text.muted.lowContrast"
    data-blade-component="title"
    font-family="text"
    font-size="700"
    font-style="normal"
    font-weight="bold"
  >
    Displaying Landing Page Title
  </h2>
</div>
`;

exports[`<Title /> should render Title with variant "small" 1`] = `
.c0 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 1.5rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 2rem;
  margin: 0;
  padding: 0;
}

<div>
  <h3
    class="c0"
    color="surface.text.normal.lowContrast"
    data-blade-component="title"
    font-family="text"
    font-size="600"
    font-style="normal"
    font-weight="bold"
  >
    Displaying Landing Page Title
  </h3>
</div>
`;

exports[`<Title /> should render Title with variant "small" and contrast "high" 1`] = `
.c0 {
  color: hsla(0,0%,100%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 1.5rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 2rem;
  margin: 0;
  padding: 0;
}

<div>
  <h3
    class="c0"
    color="surface.text.normal.highContrast"
    data-blade-component="title"
    font-family="text"
    font-size="600"
    font-style="normal"
    font-weight="bold"
  >
    Displaying Landing Page Title
  </h3>
</div>
`;
